# SDLP

./: CMakeLists.txt  README.md
SDL_Core/src/appMain/: CMakeLists.txt  appMain.cpp  log4cplus.properties
SDL_Core/src/components/: CMakeLists.txt
SDL_Core/src/components/AppMgr/: CMakeLists.txt
SDL_Core/src/components/AppMgr/include/AppMgr/: AppMgr.h  AppMgrCore.h  ProfileManagerAdapter.hpp
SDL_Core/src/components/AppMgr/src/: AppMgr.cpp  AppMgrCore.cpp  MobileHandler.cpp  ProfileManagerAdapter.cpp
SDL_Core/src/components/ConnectionHandler/: CMakeLists.txt
SDL_Core/src/components/JSONHandler/: CMakeLists.txt
SDL_Core/src/components/JSONHandler/sdlinkObjGenerator/: v4_protocol_v1_2_no_extra.xml  v4_protocol_v2_0_revP.xml
SDL_Core/src/components/JSONHandler/sdlinkObjGenerator/scripts/: robok0der.pl
SDL_Core/src/components/JSONHandler/src/: JSONHandler.cpp
SDL_Core/src/components/JSONHandler/src/RPC2ObjectsImpl/: Marshaller.cpp
SDL_Core/src/components/JSONHandler/src/SDLRPCObjectsImpl/V1/: ActionPerformerMarshaller.cpp  ActionPerformerMarshaller.gp  ActionPerformerMarshaller.h  AddProfile_request.cpp  AddProfile_requestMarshaller.cpp  AddProfile_requestMarshaller.h  AddProfile_response.cpp  AddProfile_responseMarshaller.cpp  AddProfile_responseMarshaller.h  AppStateChanged_request.cpp  AppStateChanged_requestMarshaller.cpp  AppStateChanged_requestMarshaller.h  AppStateChanged_response.cpp  AppStateChanged_responseMarshaller.cpp  AppStateChanged_responseMarshaller.h  LoadProfile_request.cpp  LoadProfile_requestMarshaller.cpp  LoadProfile_requestMarshaller.h  LoadProfile_response.cpp  LoadProfile_responseMarshaller.cpp  LoadProfile_responseMarshaller.h  Marshaller.cpp  Marshaller.gp  Marshaller.inc  MobileAppStateMarshaller.cpp  MobileAppStateMarshaller.gp  MobileAppStateMarshaller.h  MobileAppStateMarshaller.inc  OnProfileStateChanged.cpp  OnProfileStateChangedMarshaller.cpp  OnProfileStateChangedMarshaller.h  OnProfileToAppMessage.cpp  OnProfileToAppMessageMarshaller.cpp  OnProfileToAppMessageMarshaller.h  OnProfileUnloaded.cpp  OnProfileUnloadedMarshaller.cpp  OnProfileUnloadedMarshaller.h  OnUnloadProfile.cpp  OnUnloadProfileMarshaller.cpp  OnUnloadProfileMarshaller.h  (+25 more)
SDL_Core/src/components/JSONHandler/src/SDLRPCObjectsImpl/V2/: ActionPerformerMarshaller.cpp  ActionPerformerMarshaller.h  AddProfile_request.cpp  AddProfile_requestMarshaller.cpp  AddProfile_requestMarshaller.h  AddProfile_response.cpp  AddProfile_responseMarshaller.cpp  AddProfile_responseMarshaller.h  AppStateChanged_request.cpp  AppStateChanged_requestMarshaller.cpp  AppStateChanged_requestMarshaller.h  AppStateChanged_response.cpp  AppStateChanged_responseMarshaller.cpp  AppStateChanged_responseMarshaller.h  LoadProfile_request.cpp  LoadProfile_requestMarshaller.cpp  LoadProfile_requestMarshaller.h  LoadProfile_response.cpp  LoadProfile_responseMarshaller.cpp  LoadProfile_responseMarshaller.h  Marshaller.cpp  MobileAppStateMarshaller.cpp  MobileAppStateMarshaller.inc  OnProfileStateChanged.cpp  OnProfileStateChangedMarshaller.cpp  OnProfileStateChangedMarshaller.h  OnProfileToAppMessage.cpp  OnProfileToAppMessageMarshaller.cpp  OnProfileToAppMessageMarshaller.h  OnProfileUnloaded.cpp  OnProfileUnloadedMarshaller.cpp  OnProfileUnloadedMarshaller.h  ProfileStateMarshaller.cpp  ProfileStateMarshaller.h  ProfileStateMarshaller.inc  RemoveProfile_request.cpp  RemoveProfile_requestMarshaller.cpp  (+16 more)
SDL_Core/src/components/ProfileManager/: CMakeLists.txt
SDL_Core/src/components/ProfileManager/ApplicationManagerHmiProtocol/: CMakeLists.txt
SDL_Core/src/components/ProfileManager/ApplicationManagerHmiProtocol/src/: ProfilesAppsMessage.cpp
SDL_Core/src/components/ProfileManager/ProfileManagerUtils/: CMakeLists.txt
SDL_Core/src/components/ProfileManager/ProfileManagerUtils/src/: IviLinkHmiRequest.cpp  OnIviLinkHmiNotification.cpp  RpcParser.cpp
SDL_Core/src/components/ProfileManager/ProfileProcess/: CMakeLists.txt  log4cplus.properties
SDL_Core/src/components/ProfileManager/ProfileProcess/src/: ProfileManagerCommunicator.cpp  ProfileProcess.cpp  main.cpp
SDL_Core/src/components/ProfileManager/include/ProfileManager/: ActiveProfilesRegister.h  ApplicationManagerHmiCommunicator.h  IProfile.h  IProfileCallbacks.h  IviLinkHmiRequest.h  OnIviLinkHmiNotification.h  ProfileCommunicator.h  ProfileConnectionsRegister.h  ProfileInstanceManager.h  ProfileLibrariesManager.h  ProfileManager.h  ProfileManagerCommon.h  ProfileManagerResult.h  RpcHmiAPI.h  RpcHmiAPI2.h
SDL_Core/src/components/ProfileManager/src/: ActiveProfilesRegister.cpp  ApplicationManagerHmiCommunicator.cpp  ProfileCommunicator.cpp  ProfileConnectionsRegister.cpp  ProfileInstanceManager.cpp  ProfileLibrariesManager.cpp  ProfileManager.cpp
SDL_Core/src/components/ProtocolHandler/: CMakeLists.txt
SDL_Core/src/components/ProtocolHandler/src/: ProtocolHandler.cpp
SDL_Core/src/components/TransportManager/: CMakeLists.txt
SDL_Core/src/components/TransportManager/src/: CTCPAutoconnectAdapter.cpp  CTCPAutoconnectAdapter.hpp  CTCPAutoconnectAdapterCommon.hpp  CTransportManager.cpp
SDL_Core/src/components/Utils/: CMakeLists.txt
SDL_Core/src/components/Utils/ZmqUtils/: CMakeLists.txt
SDL_Core/src/components/Utils/ZmqUtils/src/: ReceiverZmqSocket.cpp  SenderZmqSocket.cpp  ZmqClient.cpp  ZmqServer.cpp  ZmqSocket.cpp  ZmqSocketsRegister.cpp
SDL_Core/src/components/Utils/include/Utils/: MultithreadingMap.h  UUID.hpp
SDL_Core/src/components/Utils/src/: Base64Coder.cpp  UUID.cpp  WorkWithOS.cpp
SDL_Core/src/thirdPartyLibs/: CMakeLists.txt
profiles/SampleProfile/: CMakeLists.txt
profiles/SampleProfile/include/SampleProfile/: SampleProfile.h
profiles/SampleProfile/src/: SampleProfile.cpp
profiles/TestEchoProfile/: CMakeLists.txt
profiles/TestEchoProfile/include/: TestEchoProfile.h
profiles/TestEchoProfile/src/: TestEchoProfile.cpp
profiles/TestSendingMsgProfile/: CMakeLists.txt
profiles/TestSendingMsgProfile/include/: TestSendingMsgProfile.h
profiles/TestSendingMsgProfile/src/: TestSendingMsgProfile.cpp
(+179 files in other folders)
