# --- TransportManager
add_subdirectory(./TransportManager)

# --- AppMgr
add_subdirectory(./AppMgr)

# --- JSONHandler
add_subdirectory(./JSONHandler)

# --- ProtocolHandler
add_subdirectory(./ProtocolHandler)

# --- ProfileManager
add_subdirectory(./ProfileManager)

# --- ConnectionHandler
add_subdirectory(./ConnectionHandler)

# --- Utils
add_subdirectory(./Utils)
add_subdirectory(./Utils/ZmqUtils/)
